# portfolio

./: CMakeLists.txt
include/: accel.h  cloth.h  defines.h  mass.h  scene.h  spring.h  utils.h
src/: accel.cpp  cloth.cpp  main.cpp  scene.cpp  utils.cpp
